--- a/css/style.css
+++ b/css/style.css
@@ -552,10 +552,6 @@ video {
   position: relative;
 }
 
-.inset-1\/4 {
-  inset: 25%;
-}
-
 .left-6 {
   left: 1.5rem;
 }
@@ -572,33 +568,22 @@ video {
   top: 0.875rem;
 }
 
-.top-14 {
-  top: 3.5rem;
-}
-
-.top-1\/2 {
-  top: 50%;
-}
-
-.top-1\/3 {
-  top: 33.333333%;
-}
-
-.top-2\/3 {
-  top: 66.666667%;
-}
-
-.left-1\/2 {
-  left: 50%;
-}
-
-.left-2 {
-  left: 0.5rem;
+.col-span-1 {
+  grid-column: span 1 / span 1;
 }
 
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
 .mt-10 {
@@ -611,22 +596,6 @@ video {
 
 .mt-28 {
   margin-top: 7rem;
-}
-
-.mb-7 {
-  margin-bottom: 1.75rem;
-}
-
-.mb-12 {
-  margin-bottom: 3rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
 }
 
 .mt-8 {
@@ -651,18 +620,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.max-w-xl {
-  max-width: 36rem;
-}
-
-.max-w-2xl {
-  max-width: 42rem;
-}
-
-.max-w-lg {
-  max-width: 32rem;
 }
 
 .max-w-screen-xl {
@@ -701,6 +658,10 @@ video {
   gap: 0px;
 }
 
+.gap-7 {
+  gap: 1.75rem;
+}
+
 .space-x-6 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1.5rem * var(--tw-space-x-reverse));
@@ -711,6 +672,12 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.75rem * var(--tw-space-y-reverse));
+}
+
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
 .self-end {
@@ -731,9 +698,8 @@ video {
   background-color: hsl(51 100% 49% / var(--tw-bg-opacity));
 }
 
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+.p-10 {
+  padding: 2.5rem;
 }
 
 .p-3 {
@@ -744,28 +710,8 @@ video {
   padding: 1.25rem;
 }
 
-.p-6 {
-  padding: 1.5rem;
-}
-
-.p-20 {
-  padding: 5rem;
-}
-
-.p-32 {
-  padding: 8rem;
-}
-
-.p-40 {
-  padding: 10rem;
-}
-
-.p-44 {
-  padding: 11rem;
-}
-
-.p-10 {
-  padding: 2.5rem;
+.p-7 {
+  padding: 1.75rem;
 }
 
 .px-6 {
@@ -778,17 +724,13 @@ video {
   padding-bottom: 2rem;
 }
 
-.text-left {
-  text-align: left;
-}
-
 .text-center {
   text-align: center;
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl {
@@ -799,6 +741,11 @@ video {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .font-black {
@@ -817,6 +764,10 @@ video {
   text-transform: uppercase;
 }
 
+.leading-4 {
+  line-height: 1rem;
+}
+
 .tracking-wider {
   letter-spacing: 0.05em;
 }
@@ -824,6 +775,31 @@ video {
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-cyan {
+  --tw-text-opacity: 1;
+  color: hsl(167 40% 24% / var(--tw-text-opacity));
+}
+
+.text-darkBlue {
+  --tw-text-opacity: 1;
+  color: hsl(198 62% 26% / var(--tw-text-opacity));
+}
+
+.text-darkGrayishBlue {
+  --tw-text-opacity: 1;
+  color: hsl(232 10% 55% / var(--tw-text-opacity));
+}
+
+.text-desaturatedBlue {
+  --tw-text-opacity: 1;
+  color: hsl(212 27% 19% / var(--tw-text-opacity));
+}
+
+.text-grayishBlue {
+  --tw-text-opacity: 1;
+  color: hsl(210 4% 67% / var(--tw-text-opacity));
 }
 
 .text-vDarkGrayishBlue {
@@ -836,41 +812,16 @@ video {
   color: hsl(0 0% 100% / var(--tw-text-opacity));
 }
 
-.text-darkBlue {
-  --tw-text-opacity: 1;
-  color: hsl(198 62% 26% / var(--tw-text-opacity));
-}
-
-.text-desaturatedBlue {
-  --tw-text-opacity: 1;
-  color: hsl(212 27% 19% / var(--tw-text-opacity));
-}
-
-.text-darkGrayishBlue {
-  --tw-text-opacity: 1;
-  color: hsl(232 10% 55% / var(--tw-text-opacity));
-}
-
-.text-moderateCyan {
-  --tw-text-opacity: 1;
-  color: hsl(168 34% 41% / var(--tw-text-opacity));
-}
-
-.text-cyan {
-  --tw-text-opacity: 1;
-  color: hsl(167 40% 24% / var(--tw-text-opacity));
-}
-
 .underline {
   text-decoration-line: underline;
 }
 
-.decoration-yellow {
-  text-decoration-color: hsl(51, 100%, 49%);
-}
-
 .decoration-softRed {
   text-decoration-color: hsl(7, 99%, 70%);
+}
+
+.decoration-yellow {
+  text-decoration-color: hsl(51, 100%, 49%);
 }
 
 .decoration-4 {
@@ -958,6 +909,26 @@ header {
   transform: rotate(-45deg) translateY(6px) translate(-6px);
 }
 
+.designs {
+  position: absolute;
+  top: 66.666667%;
+  left: 4rem;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .designs {
+    top: 50%;
+  }
+}
+
+@media (min-width: 976px) {
+  .designs {
+    top: 66.666667%;
+    left: 10rem;
+  }
+}
+
 @media (min-width: 768px) {
   header {
     background-image: url('../images/desktop/image-header.jpg');
@@ -968,6 +939,10 @@ header {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: hsl(0 0% 100% / var(--tw-text-opacity));
+}
+
+.hover\:decoration-8:hover {
+  text-decoration-thickness: 8px;
 }
 
 .focus\:outline-none:focus {
@@ -986,24 +961,12 @@ header {
 }
 
 @media (min-width: 768px) {
-  .md\:inset-2\/3 {
-    inset: 66.666667%;
-  }
-
-  .md\:inset-1\/3 {
-    inset: 33.333333%;
-  }
-
-  .md\:top-1\/2 {
-    top: 50%;
+  .md\:order-1 {
+    order: 1;
   }
 
   .md\:order-2 {
     order: 2;
-  }
-
-  .md\:order-1 {
-    order: 1;
   }
 
   .md\:order-3 {
@@ -1022,9 +985,8 @@ header {
     order: 6;
   }
 
-  .md\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
+  .md\:ml-24 {
+    margin-left: 6rem;
   }
 
   .md\:mt-40 {
@@ -1035,16 +997,8 @@ header {
     margin-top: 12rem;
   }
 
-  .md\:ml-10 {
-    margin-left: 2.5rem;
-  }
-
-  .md\:ml-16 {
-    margin-left: 4rem;
-  }
-
-  .md\:ml-24 {
-    margin-left: 6rem;
+  .md\:block {
+    display: block;
   }
 
   .md\:flex {
@@ -1055,62 +1009,28 @@ header {
     display: none;
   }
 
-  .md\:w-52 {
-    width: 13rem;
-  }
-
-  .md\:w-60 {
-    width: 15rem;
-  }
-
-  .md\:w-56 {
-    width: 14rem;
-  }
-
-  .md\:w-48 {
-    width: 12rem;
-  }
-
-  .md\:w-72 {
-    width: 18rem;
-  }
-
-  .md\:w-96 {
-    width: 24rem;
+  .md\:w-3\/5 {
+    width: 60%;
   }
 
   .md\:w-80 {
     width: 20rem;
   }
 
-  .md\:w-4\/5 {
-    width: 80%;
-  }
-
-  .md\:w-3\/5 {
-    width: 60%;
+  .md\:w-96 {
+    width: 24rem;
   }
 
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .md\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
-  }
-}
-
-@media (min-width: 976px) {
-  .lg\:inset-1\/4 {
-    inset: 25%;
-  }
-
-  .lg\:top-1\/3 {
-    top: 33.333333%;
-  }
-
-  .lg\:top-2\/3 {
-    top: 66.666667%;
   }
 }
